# pallas

./: .gitignore  CMakeLists.txt  README.md
data/: class_weights.txt  model_config.json  scenario_example.json  train_config.json
data/scenario_bank/: README.md  alliance_fracture_01.json  alliance_fracture_02.json  alliance_fracture_03.json  cold_war_standoff_01.json  cold_war_standoff_02.json  cold_war_standoff_03.json  coup_pressure_01.json  coup_pressure_02.json  coup_pressure_03.json  deterrence_brink_01.json  deterrence_brink_02.json  deterrence_brink_03.json  embargo_chokepoint_01.json  embargo_chokepoint_02.json  embargo_chokepoint_03.json  island_defense_01.json  island_defense_02.json  island_defense_03.json  manifest.tsv  multi_front_war_01.json  multi_front_war_02.json  multi_front_war_03.json  resource_scarcity_01.json  resource_scarcity_02.json  resource_scarcity_03.json
include/: battle_common.h  battle_runtime.h  battle_server.h  common_utils.h  country_state_common.h  data_pipeline.h  dataloader.h  linear.h  logging.h  model.h  perf_counters.h  scenario_config.h  simulation_engine.h  strategy_utils.h  system_metrics.h  tensor.h  tool_registry.h  tournament.h  train_config.h
plugins/: default_tools.cpp
src/: battle_main.cpp  battle_runtime.cpp  battle_server.cpp  common_utils.cpp  data_pipeline.cpp  dataloader.cpp  linear.cpp  logging.cpp  main.cpp  model.cpp  perf_counters.cpp  replay_main.cpp  scenario_config.cpp  simulation_engine.cpp  strategy_utils.cpp  system_metrics.cpp  tensor.cpp  tool_registry.cpp  tournament.cpp  train_config.cpp
tests/: model_tests.cpp  test_framework.h
web/: app.js  index.html  style.css
